# proyecto

./: .gitignore  CMakeLists.txt  Makefile  README.md  Script.sh  todo.txt
cmake-modules/: options.cmake
inc/: locky.h
libproject/: CMakeLists.txt
libproject/inc/: ANMS_SSC.hpp  LATCHK.h  gms_matcher.h  helper.h
libproject/src/: bold.cpp  locky.cpp
mainproject/: CMakeLists.txt  main.cpp
mainproject/resources/: Script.sh  times.sh
src/: .FAST_BRIEF.cpp.swp  FAST_BRIEF  FAST_BRIEF.cpp  helper.cpp  main.cpp
